//Protocol buffer version이고 grpc는 proto3을 추천함 

syntax = "proto3";
package planzHelloWorld;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Bye {
  string name = 1;
}

message ByeReply {
  string message = 1;
}

// bi-directional example 
message ChatMessage {
  string message = 1;
}

service ChatService {
  rpc chat(stream ChatMessage) returns (stream ChatMessage) {}
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc Bye(Bye) returns (ByeReply) {}

}
